# pmoai

./: .env.example  .gitignore  INSTALL.md  MANIFEST.in  README.md  install.py  patch_agents.py  pmo_example.py  setup.py  simple_test.py  test_direct_import.py  test_with_patch.py  use_crewai.py  use_crewai_simple.py
docs/: README.md  api_reference.md  getting_started.md
examples/: README.md  cli_example.bat  cli_example.sh  knowledge_example.py  memory_example.py  minimal_example.py  project_initiation_example.py  simple_example.py  tasks_example.py  tools_example.py  use_crewai_simple.py  verify_installation.py  yaml_config_example.py
src/pmoai/: __init__.py  agent.py  crew.py  llm.py  process.py  task.py
src/pmoai/agents/: __init__.py
src/pmoai/cli/: __init__.py  add_crew_to_flow.py  cli.py  command.py  config.py  constants.py  create_crew.py  create_flow.py  crew_chat.py  install_crew.py  plus_api.py  provider.py  reset_memories_command.py  run_crew.py  train_crew.py  update_crew.py  utils.py  version.py
src/pmoai/cli/templates/crew/: README.md  __init__.py  crew.py  main.py  pyproject.toml
src/pmoai/cli/templates/crew/config/: agents.yaml  tasks.yaml
src/pmoai/cli/templates/crew/knowledge/: user_preference.txt
src/pmoai/cli/templates/crew/tools/: __init__.py  custom_tool.py
src/pmoai/collaboration/: __init__.py  (+3 more)
tests/: __init__.py  run_tests.py  test_basic_imports.py  test_config.py  test_core.py  test_import.py  test_pmoai.py  test_tools.py  test_utilities.py
utilities/: __init__.py  patch_tensorflow.py  set_api_key.py  set_openai_key.py
(+139 files in other folders)
